--- a/Readme
+++ b/Readme
@@ -1,1 +1,4 @@
-## Read me
+Read me
+
+This app is for people want to look for a store to take care of their pets.
+There are Readme in both frontend and backend folder for more information.
