--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
 This app is for people want to look for a store to take care of their pets.
 There are Readme in both frontend and backend folder for more information.
+
+I used Ruby on rails and react.js.
